<resources>
    <string name="app_name">Toilet Locator</string>

    <!-- fragment_welcome !-->
    <string name="app_description">The fastest way to find nearby toilets</string>
    <string name="app_logo">App logo</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login with Google</string>

    <!-- activity_permissions !-->
    <string name="location_logo">Location logo</string>
    <string name="permission_message">In order to use the app you have to accept the location permissions</string>
    <string name="ask_for_permission">Ask for permission</string>

    <!-- fragment_main !-->
    <string name="welcome_message">Welcome!</string>
    <string name="logged_in_as">Logged in as </string>
    <string name="guest">guest user</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="add_toilet_fab">add toilet</string>
    <string name="action_map">Map</string>
    <string name="action_list">List</string>
    <string name="action_urgent">Urgent</string>

    <!-- fragment_map !-->
    <string name="handicap_access">accessible</string>

    <!-- fragment_add_toilet_map !-->
    <string name="choose_the_toilet_address">Choose the toilet address</string>
    <string name="toilet_address">Address</string>
    <string name="loading">Loading…</string>
    <string name="pinpoint">pinpoint</string>
    <string name="address_not_found">Address not found.</string>
    <string name="address_is_empty">Address cannot be empty</string>
    <string name="not_in_circle">The location is not nearby</string>
    <string name="cancel_adding_toilet">Cancel</string>
    <string name="continue_adding_toilet">Continue</string>
    <string name="free">free</string>
    <string name="location_type">location type</string>
    <string name="open_toilet_details">Open toilet details</string>

    <!-- fragment_add_toilet_details !-->
    <string name="more_details">More details</string>
    <string name="toilet_description">Toilet description (optional)</string>
    <string name="free_icon">Free</string>
    <string name="is_it_free">Is it free?</string>
    <string name="handicap_access_icon">Accessible toilet</string>
    <string name="handicap_accessible">Accessible toilet</string>
    <string name="type_of_location">Type of location</string>
    <string name="back">Back</string>
    <string name="back_button">Back</string>
    <string name="submit_toilet">Submit information</string>

    <!-- cancel_adding_toilet_dialog -->
    <string name="cancel_adding_toilet_dialog_message">Are you sure you want to return to the main screen? The data you typed will be lost.</string>
    <string name="cancel_adding_toilet_dialog_stay_button">Stay</string>
    <string name="cancel_adding_toilet_dialog_yes_button">Yes</string>

    <!-- fragment_add_toilet_success !-->
    <string name="thank_you_for_contributing">Thank you for contributing!</string>
    <string name="the_location_was_successfully_saved">The location was successfully saved.</string>
    <string name="return_to_home_page">Return to the home page</string>
    <string name="location_type_is_empty">Location type cannot be empty!</string>


    <!-- fragment_view_toilet !-->
    <string name="edit_toilet">Edit toilet</string>
    <string name="edit">EDIT TOILET</string>
    <string name="review_toilet">REVIEW</string>
    <string name="share_toilet">Share</string>
    <string name="navigate_to_toilet">Navigate</string>
    <string name="no_message">No message</string>
    <string name="location_has_no_reviews">This location has no reviews…</string>
    <string name="reviews">Reviews</string>
    <string name="date_not_available">date is not available yet</string>
    <string name="share_toilet_message">I found a toilet near me! Check it out</string>

    <!-- fragment_review !-->
    <string name="leave_a_review">Leave a review</string>
    <string name="review_message">Message(optional)</string>
    <string name="review_rating">Review rating</string>
    <string name="submit_review">Submit review</string>
    <string name="review_successfully_submitted">The review was successfully submitted!</string>

    <!-- fragment_list !-->
    <string name="number_of_toilets">There are</string>
    <string name="toilets_nearby">toilets nearby</string>

    <!-- fragment_urgent !-->
    <string name="no_toilets_found">No toilets around you!</string>
    <string name="found_a_toilet">A nearby toilet was found!</string>
    <string name="more_info">More info</string>
</resources>