<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_welcome_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeFragment">

    <LinearLayout
        android:id="@+id/items_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/app_logo_imageView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/icon_logo" />

        <android.widget.Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/app_name_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/app_name"
            android:textAlignment="center"

            android:textColor="?attr/colorPrimary"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/app_description_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/app_description"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="85dp" />

        <Button
            android:id="@+id/login_with_Google_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/login_with_google"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/or_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login_as_guest_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/continue_as_guest"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>